# HomeCreditDefault

./: .gitignore  main.py  pyproject.toml
notebooks/: main.ipynb
src/: data.py  feature_selection.py  lr_baseline.py  metrics.py  rf_baseline.py
